[package]
name = "sagoin"
version = "0.2.0"
authors = ["figsoda <figsoda@pm.me>"]
edition = "2021"
description = "A command-line submission tool for the UMD CS Submit Server"
readme = "README.md"
homepage = "https://github.com/figsoda/sagoin"
repository = "https://github.com/figsoda/sagoin"
license = "AGPL-3.0-or-later"
keywords = ["cli", "command-line", "marmoset", "submit", "umd"]
categories = ["command-line-utilities"]

[dependencies]
concolor = "0.0.9"
concolor-clap = { version = "0.0.12", features = ["api_unstable"] }
eyre = "0.6.8"
icalendar = { version = "0.13.3", features = ["parser"] }
ignore = "0.4.18"
is_executable = "1.0.1"
java-properties = "1.4.1"
rpassword = "7.1.0"
serde = { version = "1.0.147", features = ["derive"] }
time = { version = "0.3.17", features = ["formatting", "macros", "parsing"] }
toml = "0.5.9"
ureq = "2.5.0"
webbrowser = "0.8.2"
zip = { version = "0.6.3", default-features = false }

[dependencies.clap]
version = "4.0.26"
features = ["cargo", "derive", "env", "unicode", "wrap_help"]

[dependencies.color-eyre]
version = "0.6.2"
default-features = false
features = ["track-caller"]

[dependencies.multipart]
version = "0.18.0"
default-features = false
features = ["client"]

[target."cfg(unix)".dependencies]
xdg = "2.4.1"

[target."cfg(windows)".dependencies]
dirs = "4.0.0"

[build-dependencies]
clap = { version = "4.0.26", features = ["derive", "env"] }
clap_complete = "4.0.5"
clap_mangen = "0.2.4"
concolor-clap = "0.0.12"

[dev-dependencies]
tempfile = "3.3.0"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
