[package]
name = "sagoin"
version = "0.2.3"
authors = ["figsoda <figsoda@pm.me>"]
edition = "2021"
description = "A command-line submission tool for the UMD CS Submit Server"
readme = "README.md"
homepage = "https://github.com/figsoda/sagoin"
repository = "https://github.com/figsoda/sagoin"
license = "AGPL-3.0-or-later"
keywords = ["cli", "command-line", "marmoset", "submit", "umd"]
categories = ["command-line-utilities"]

[dependencies]
concolor = "0.1.1"
concolor-clap = { version = "0.1.0", features = ["api"] }
eyre = "0.6.12"
icalendar = { version = "0.16.8", features = ["parser"] }
ignore = "0.4.23"
is_executable = "1.0.3"
java-properties = "2.0.0"
rpassword = "7.3.1"
serde = { version = "1.0.210", features = ["derive"] }
time = { version = "0.3.36", features = ["formatting", "macros", "parsing"] }
toml = { version = "0.8.19", default-features = false, features = ["parse"] }
ureq = "2.10.1"
webbrowser = "1.0.2"
zip = { version = "2.2.0", default-features = false }

[dependencies.clap]
version = "4.5.17"
features = ["cargo", "derive", "env", "unicode", "wrap_help"]

[dependencies.color-eyre]
version = "0.6.3"
default-features = false
features = ["track-caller"]

[dependencies.multipart]
version = "0.18.0"
default-features = false
features = ["client"]

[target."cfg(unix)".dependencies]
xdg = "2.5.2"

[target."cfg(windows)".dependencies]
dirs = "5.0.1"

[build-dependencies]
clap = { version = "4.5.17", features = ["derive", "env"] }
clap_complete = "4.5.26"
clap_mangen = "0.2.23"
concolor-clap = "0.1.0"

[dev-dependencies]
tempfile = "3.12.0"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(not_build)'] }
